[tool.poetry]
name = "tornado-openapi3-example"
version = "0.1.0"
description = ""
authors = ["Correl <correl@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tornado = "^6"
tornado-openapi3 = "^0.2.4"

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
pytest = "^5.2"
pytest-black = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
